@@ -13,6 +13,10 @@ import com.laydowncoding.tickitecking.domain.seat.repository.SeatRepository;
 import com.laydowncoding.tickitecking.global.exception.CustomRuntimeException;
 import java.util.ArrayList;
 import java.util.List;
+import java.util.Set;
+import java.util.stream.Collectors;
+import java.util.stream.IntStream;
+import java.util.stream.Stream;
 import lombok.RequiredArgsConstructor;
 import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
@@ -22,110 +26,152 @@ import org.springframework.transaction.annotation.Transactional;
 @Transactional
 public class SeatServiceImpl implements SeatService {
 
-    private final SeatPriceRepository seatPriceRepository;
-    private final SeatRepository seatRepository;
+  private final SeatPriceRepository seatPriceRepository;
+  private final SeatRepository seatRepository;
 
-    @Override
-    public void createSeats(List<SeatRequestDto> seatRequestDtos, Long concertId,
-        AuditoriumCapacityDto capacityDto) {
-        List<Seat> seatList = new ArrayList<>();
-        char maxRowChar = capacityDto.getMaxRow().charAt(0);
+  @Override
+  public void createSeats(List<SeatRequestDto> seatRequestDtos, Long concertId,
+      AuditoriumCapacityDto capacityDto) {
+    List<Seat> seatList = seatRequestDtos.stream()
+        .flatMap(seatRequest -> seatRequest.getHorizontals().stream()
+            .filter(horizontal -> isValidHorizontal(horizontal, capacityDto.getMaxRow()))
+            .flatMap(horizontal -> generateSeats(concertId, capacityDto, horizontal,
+                seatRequest.getGrade())))
+        .collect(Collectors.toList());
 
-        for (SeatRequestDto seatRequest : seatRequestDtos) {
-            for (String horizontal : seatRequest.getHorizontals()) {
-                char horizontalChar = horizontal.charAt(0);
+    seatRepository.saveAllSeat(seatList);
+  }
 
-                if (horizontalChar > maxRowChar) {
-                    throw new CustomRuntimeException(INVALID_HORIZONTAL.getMessage());
-                }
+  @Override
+  public void updateSeats(List<SeatRequestDto> seatRequestDtos, Long concertId,
+      AuditoriumCapacityDto capacityDto) {
+    List<Seat> seatList = seatRepository.findAllByConcertIdAndAuditoriumId(concertId,
+        capacityDto.getAuditoriumId());
 
-                for (int vertical = 1; vertical <= Integer.parseInt(capacityDto.getMaxColumn());
-                    vertical++) {
-                    Seat seat = Seat.builder()
-                        .vertical(String.valueOf(vertical))
-                        .horizontal(horizontal)
-                        .grade(seatRequest.getGrade())
-                        .auditoriumId(capacityDto.getAuditoriumId())
-                        .concertId(concertId)
-                        .reserved("N")
-                        .availability("Y")
-                        .build();
-                    seatList.add(seat);
-                }
-            }
-        }
+    Set<String> requiredHorizontals = extractValidHorizontals(seatRequestDtos,
+        capacityDto.getMaxRow());
+    Set<Integer> requiredVerticals = rangeToSet(1, Integer.parseInt(capacityDto.getMaxColumn()));
 
-        seatRepository.saveAll(seatList);
+    List<Seat> updateSeatList = filterSeats(seatList, requiredHorizontals, requiredVerticals);
+    updateSeatGrades(updateSeatList, seatRequestDtos, requiredVerticals);
+  }
+
+  @Override
+  public void deleteSeats(Long concertId) {
+    List<Seat> seatList = seatRepository.findAllByConcertId(concertId);
+
+    seatRepository.deleteAll(seatList);
+  }
+
+  @Override
+  public void createSeatPrices(Long concertId, List<SeatPriceRequestDto> seatPriceRequestDtos) {
+    List<SeatPrice> seatPrices = seatPricesToEntity(concertId, seatPriceRequestDtos);
+    seatPriceRepository.saveAll(seatPrices);
+  }
+
+  @Override
+  public List<SeatPriceResponseDto> updateSeatPrices(Long concertId,
+      List<SeatPriceRequestDto> seatPriceRequestDtos) {
+    seatPriceRepository.deleteAllByConcertId(concertId);
+    List<SeatPrice> seatPrices = seatPricesToEntity(concertId, seatPriceRequestDtos);
+    List<SeatPrice> saved = seatPriceRepository.saveAll(seatPrices);
+    return saved.stream()
+        .map(seatPrice -> new SeatPriceResponseDto(seatPrice.getGrade(), seatPrice.getPrice()))
+        .toList();
+  }
+
+  @Override
+  @Transactional(readOnly = true)
+  public List<SeatPriceResponseDto> getSeatPrices(Long concertId) {
+    List<SeatPrice> seatPrices = seatPriceRepository.findAllByConcertId(concertId);
+    return seatPrices.stream()
+        .map(seatPrice -> new SeatPriceResponseDto(seatPrice.getGrade(), seatPrice.getPrice()))
+        .toList();
+  }
+
+  @Override
+  public void deleteSeatPrices(Long concertId) {
+    seatPriceRepository.deleteAllByConcertId(concertId);
+  }
+
+  private List<SeatPrice> seatPricesToEntity(Long concertId,
+      List<SeatPriceRequestDto> seatPriceRequestDtos) {
+
+    List<SeatPrice> seatPrices = new ArrayList<>();
+
+    for (SeatPriceRequestDto requestDto : seatPriceRequestDtos) {
+      SeatPrice seatPrice = SeatPrice.builder()
+          .grade(requestDto.getGrade())
+          .price(requestDto.getPrice())
+          .concertId(concertId)
+          .build();
+      seatPrices.add(seatPrice);
     }
+    return seatPrices;
+  }
 
-    @Override
-    public void updateSeats(List<SeatRequestDto> seatRequestDtos, Long concertId,
-        AuditoriumCapacityDto capacityDto) {
-        for (SeatRequestDto seatRequest : seatRequestDtos) {
-            for (String horizontal : seatRequest.getHorizontals()) {
-                for (int vertical = 1; vertical <= Integer.parseInt(capacityDto.getMaxColumn());
-                    vertical++) {
-                    Seat seat = seatRepository.findByConcertIdAndHorizontalAndVertical(
-                        concertId, horizontal, String.valueOf(vertical));
-                    if (seat != null) {
-                        seat.update(seatRequest.getGrade());
-                    }
-                }
-            }
-        }
+  private boolean isValidHorizontal(String horizontal, String maxRow) {
+    char horizontalChar = horizontal.charAt(0);
+    char maxRowChar = maxRow.charAt(0);
+    if (horizontalChar > maxRowChar) {
+      throw new CustomRuntimeException(INVALID_HORIZONTAL.getMessage());
     }
+    return true;
+  }
 
-    @Override
-    public void deleteSeats(Long concertId) {
-        List<Seat> seatList = seatRepository.findAllByConcertId(concertId);
+  private Stream<Seat> generateSeats(Long concertId, AuditoriumCapacityDto capacityDto,
+      String horizontal, String grade) {
+    int maxColumn = Integer.parseInt(capacityDto.getMaxColumn());
+    return IntStream.rangeClosed(1, maxColumn)
+        .mapToObj(vertical -> createSeat(concertId, capacityDto, horizontal, vertical, grade));
+  }
 
-        seatRepository.deleteAll(seatList);
-    }
+  private Seat createSeat(Long concertId, AuditoriumCapacityDto capacityDto, String horizontal,
+      int vertical, String grade) {
+    return Seat.builder()
+        .vertical(String.valueOf(vertical))
+        .horizontal(horizontal)
+        .grade(grade)
+        .auditoriumId(capacityDto.getAuditoriumId())
+        .concertId(concertId)
+        .build();
+  }
 
-    @Override
-    public void createSeatPrices(Long concertId, List<SeatPriceRequestDto> seatPriceRequestDtos) {
-        List<SeatPrice> seatPrices = seatPricesToEntity(concertId ,seatPriceRequestDtos);
-        seatPriceRepository.saveAll(seatPrices);
-    }
+  private Set<String> extractValidHorizontals(List<SeatRequestDto> seatRequestDtos, String maxRow) {
+    return seatRequestDtos.stream()
+        .flatMap(dto -> dto.getHorizontals().stream())
+        .filter(horizontal -> isValidHorizontal(horizontal, maxRow))
+        .collect(Collectors.toSet());
+  }
 
-    @Override
-    public List<SeatPriceResponseDto> updateSeatPrices(Long concertId,
-        List<SeatPriceRequestDto> seatPriceRequestDtos) {
-        seatPriceRepository.deleteAllByConcertId(concertId);
-        List<SeatPrice> seatPrices = seatPricesToEntity(concertId, seatPriceRequestDtos);
-        List<SeatPrice> saved = seatPriceRepository.saveAll(seatPrices);
-        return saved.stream()
-            .map(seatPrice -> new SeatPriceResponseDto(seatPrice.getGrade(), seatPrice.getPrice()))
-            .toList();
-    }
+  private Set<Integer> rangeToSet(int start, int end) {
+    return IntStream.rangeClosed(start, end)
+        .boxed()
+        .collect(Collectors.toSet());
+  }
 
-    @Override
-    @Transactional(readOnly = true)
-    public List<SeatPriceResponseDto> getSeatPrices(Long concertId) {
-        List<SeatPrice> seatPrices = seatPriceRepository.findAllByConcertId(concertId);
-        return seatPrices.stream()
-            .map(seatPrice -> new SeatPriceResponseDto(seatPrice.getGrade(), seatPrice.getPrice()))
-            .toList();
-    }
+  private List<Seat> filterSeats(List<Seat> seats, Set<String> requiredHorizontals,
+      Set<Integer> requiredVerticals) {
+    return seats.stream()
+        .filter(seat -> requiredHorizontals.contains(seat.getHorizontal()) &&
+            requiredVerticals.contains(Integer.parseInt(seat.getVertical())))
+        .collect(Collectors.toList());
+  }
 
-    @Override
-    public void deleteSeatPrices(Long concertId) {
-        seatPriceRepository.deleteAllByConcertId(concertId);
-    }
+  private void updateSeatGrades(List<Seat> seats, List<SeatRequestDto> seatRequestDtos,
+      Set<Integer> requiredVerticals) {
+    seats.forEach(seat -> {
+      seatRequestDtos.forEach(dto -> {
+        dto.getHorizontals().stream()
+            .filter(horizontal -> horizontal.equals(seat.getHorizontal()))
+            .forEach(horizontal -> {
+              if (requiredVerticals.contains(Integer.parseInt(seat.getVertical()))) {
+                seat.update(dto.getGrade());
+              }
+            });
+      });
+    });
 
-    private List<SeatPrice> seatPricesToEntity(Long concertId,
-        List<SeatPriceRequestDto> seatPriceRequestDtos) {
-
-        List<SeatPrice> seatPrices = new ArrayList<>();
-
-        for (SeatPriceRequestDto requestDto : seatPriceRequestDtos) {
-            SeatPrice seatPrice = SeatPrice.builder()
-                .grade(requestDto.getGrade())
-                .price(requestDto.getPrice())
-                .concertId(concertId)
-                .build();
-            seatPrices.add(seatPrice);
-        }
-        return seatPrices;
-    }
+    seatRepository.updateAllSeat(seats);
+  }
 }
